[package]
name = "sfcgal"
version = "0.5.0"
authors = ["Matthieu Viry <matthieu.viry@cnrs.fr>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = """
High-level bindings to SFCGAL and conversion from/to other geometry libraries.
"""
readme = "README.md"
homepage = "https://github.com/mthh/sfcgal-rs"
repository = "https://github.com/mthh/sfcgal-rs"
keywords = ["geometry", "geospatial", "gis", "sfcgal"]
categories = ["algorithms", "api-bindings"]
documentation = "https://mthh.github.io/sfcgal-rs/sfcgal/"

[dependencies]
sfcgal-sys = "0.6.0"
anyhow = "1.0"
libc = "0.2"
geo-types = "0.7"
enum-primitive-derive = "0.2"
num-traits = "0.2"
approx = "0.5"
geojson = ">= 0.19, <= 0.24"
