[package]
name = "sfcgal"
version = "0.8.2"
edition = "2021"

authors = ["Matthieu Viry <matthieu.viry@cnrs.fr>"]
license = "MIT/Apache-2.0"
description = """
High-level bindings to SFCGAL and conversion from/to other geometry libraries.
"""

readme = "README.md"
homepage = "https://github.com/mthh/sfcgal-rs"
repository = "https://github.com/mthh/sfcgal-rs"
documentation = "https://mthh.github.io/sfcgal-rs/sfcgal/"

keywords = ["geometry", "geospatial", "gis", "sfcgal"]
categories = ["algorithms", "api-bindings"]

[dependencies]
sfcgal-sys = "0.9.0"
anyhow = "1.0"
libc = "0.2"
num-traits = "0.2"
enum-primitive-derive = "0.3"
approx = "0.5"

geo-types = { version = "0.7", optional = true }
geojson = { version = ">= 0.19, <= 0.24.2", optional = true }

[features]
default = ["geo-types", "geojson"]
geo-types = ["dep:geo-types"]
geojson = ["dep:geojson"]
